# chess

./: Cargo.toml  README.md
.github/workflows/: check.yml  test.yml
assets/JohnPablok_Cburnett_Chess_set/: license
bench-baselines/: stupid-search-all.json  transpositions.json
benches/: engine_benchmarks.rs
src/: assets.rs  engine.rs  lib.rs  main.rs  square.rs  utils.rs  zobrist.rs
src/engine/: ella.rs
